# Construction-Hazard-Detection

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  Dockerfile  README-zh-tw.md  README.md  SECURITY.md  data_augmentation.py  docker-compose.yml  image_processing.py  main.py  pyproject.toml  requirements.txt  run_server.sh  site_safety_monitor.py  site_safety_monitor_docstrings.py  test_site_safety_monitor.py  train.py  user_manual_marp.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
api/: model_api.py
assets/: site_safety_monitor.drawio
config/: configuration.json  configuration.yaml  nginx_config_example.conf  streaming_web_frontend.conf
docs/: Detailed_Cost_Analysis_and_Payback_Plan_Report.md  hardware-specs-proposal.md  hardware-specs-proposal_test.md  presentation_marp.md
notebooks/: Construction_Hazard_Detection.ipynb
scripts/: base.Dockerfile  init.sql  init_db.sh  train_yolo_models.sh
src/: README-zh-tw.md  README.md  danger_detector.py  data_augmentation.py  demo.py  drawing_manager.py  frame_sender.py  lang_config.py  line_notifier.py  live_stream_detection.py  live_stream_detection_SAHI_YOLOv8.py  live_stream_tracker.py  live_stream_tracking.py  live_stream_tracking.py.py  messenger_notifier.py  model_fetcher.py  monitor_logger.py  site_safety_monitor.py  stream_capture.py  stream_viewer.py  telegram_notifier.py  utils.py  violation_sender.py  visualise_bounding_boxes.py  wechat_notifier.py
tests/: danger_detector_test.py  detection_test.py  drawing_manager_test.py  line_notifier_test.py  live_stream_detection_test.py  live_stream_tracker_test.py  main_test.py  messenger_notifier_test.py  model_fetcher_test.py  monitor_logger_test.py  stream_capture_test.py  stream_caputre_test.py  stream_viewer_test.py  telegram_notifier_test.py  test_danger_detector.py  test_data_augmentation.py  test_demo.py  test_line_notifier.py  test_live_stream_detection.py  test_main.py  test_monitor_logger.py  test_stream_capture.py  (+3 more)
(+459 files in other folders)
