[project]
name = "construction-hazard-detection"
version = "0.0.0"
description = "AI-powered construction hazard detection with YOLO and real-time notifications"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Construction Hazard Detection Contributors" }
]
license = { file = "LICENSE" }
dependencies = [
  "aiofiles==25.1.0",
  "aiosqlite==0.22.1",
  "albumentationsx==2.0.15",
  "apscheduler==3.11.2",
  "aiomysql==0.3.2",
  "authlib==1.6.6",
  "bcrypt==5.0.0",
  "ckip_transformers==0.3.4",
  "transformers==5.0.0",
  "cloudinary==1.44.1",
  "fastapi==0.128.0",
  "fastapi_jwt==0.3.0",
  "fastapi_limiter==0.1.6",
  "fastmcp==2.14.4",
  "firebase_admin==7.1.0",
  "httpx==0.28.1",
  "huggingface_hub==1.3.5",
  "jsonschema==4.26.0",
  "numpy==2.4.1",
  "opencv_python==4.11.0.86",
  "opencv_python_headless==4.11.0.86",
  "Pillow==12.0.0",
  "pycocotools==2.0.11",
  "pydantic[email]==2.12.5",
  "pydantic_settings==2.12.0",
  "python-dotenv==1.2.1",
  "python-jose==3.5.0",
  "python-multipart==0.0.22",
  "python-socketio==5.16.0",
  "python-telegram-bot==22.6",
  "redis==7.1.0",
  "sahi==0.11.36",
  "schedule==1.2.2",
  "scikit-learn==1.8.0",
  "shapely==2.1.2",
  "speedtest-cli==2.1.3",
  "sqlalchemy[asyncio]==2.0.46",
  "streamlink==8.1.2",
  "streamlit==1.53.1",
  "structlog==25.5.0",
  "tenacity==9.1.2",
  "tensorrt==10.14.1.48",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "twilio==9.10.0",
  "ultralytics==8.4.8",
  "uvicorn==0.40.0",
  "waitress==3.0.2",
  "watchdog==6.0.0",
  "werkzeug==3.1.5",
]

[project.optional-dependencies]
dev = [
  "codecov==2.1.13",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-xdist==3.8.0",
]

[tool.uv]
# Keep default behavior; uv will use this pyproject for dependency resolution.

[tool.mypy]
show_error_codes = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
